32 bits build fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ if(MSVC)
         set(CMAKE_INSTALL_UCRT_LIBRARIES TRUE)
         include (InstallRequiredSystemLibraries)
 
-        install(CODE "execute_process(COMMAND \"windeployqt\"  \"${BINARY_FILE}\")")
+        get_filename_component(QT_BIN_DIRECTORY ${QT_QMAKE_EXECUTABLE} DIRECTORY)
+        install(CODE "execute_process(COMMAND \"${QT_BIN_DIRECTORY}/windeployqt\"  \"${BINARY_FILE}\" WORKING_DIRECTORY \"${QT_BIN_DIRECTORY}\")")
 
 endif()
